--- a/src/input.css
+++ b/src/input.css
@@ -69,4 +69,8 @@ body {
     background-image: url("../img/bg-simplify-section-mobile.svg");
     background-repeat: no-repeat;
   }
+
+  #mobile-menu.expanded {
+    display: block;
+  }
 }
